# dltHub-teesting

./: mypy.ini  pipeline.py  pyproject.toml
.dlt/: config.toml
test/: player.json  profile.json  test_pipeline.py
