[project]
name = "dlthub-teesting"
version = "0.1.0"
description = "Tests for dlthub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt>=1.5.0",
    "duckdb>=1.1.3",
    "mypy>=1.14.1",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
]

# Add MyPy configuration
[mypy]
warn_return_any = true
warn_unused_configs = true
